tests/NormalTests/paczka2/big_fuzzy/12141309.err
Error in line 1: 3KfcGg6F15 S156 79,9
Error in line 5: TeX S156 87,8
Error in line 15: TeX S835 4,1
Error in line 28: 3KfcGg6F15 S835 388,1
Error in line 31: TeX S710 26,3
Error in line 43: BzBmjyWRH S835 45,0
Error in line 53: TeX S156 95,3
Error in line 63: BzBmjyWRH S464 89,5
Error in line 59: 3Yz6f4Q8umv S464 39,1
Error in line 54: TeX S464 1,7
Error in line 65: S156 S156 76,2
Error in line 86: gB64 S464 80,0
Error in line 98: TeX S7n0 302,3
Error in line 101: 3KfcGg6F15 S835 70,47
Error in line 92: UyWobETD5 S710 112,7
Error in line 106: 3Yz6f4Q8umv S835 40,8
Error in line 115: gB64 S156 -1,6
Error in line 114: TeX S710 219,8
Error in line 112: gB64 S156 42,0
Error in line 129: BzBmjyWRH S710 23,1
Error in line 144: 3Yz6f4Q8umv S156 91,7
Error in line 146: BzBmjyWRH S835 131,6
Error in line 154: TeX S710 20,2
Error in line 164: 3Yz6f4Q8umv S710 78,9
Error in line 170: UyWobETD5 S464 78,2
Error in line 178: gB64 S835 0,6
Error in line 194: UyWobETD5 S710 -1,7
Error in line 189: UyWobETD5 S710 5,5
Error in line 216: UyWobETD5 S156 134,65
Error in line 222: 3KfcGg6F15 S156 88,29
Error in line 211: 3Yz6f4Q8umv S156 27,5
Error in line 224: 3Yz6f4Q8umv S835 66,4
Error in line 225: 3Yz6f4Q8umv S156 0,0
Error in line 214: 3KfcGg6F15 S156 58,9
Error in line 231: BzBmjyWRH S464 48,7
Error in line 235: gB64 S835 23,6
Error in line 241: gB64 S156 72,0
Error in line 239: 3Yz6f4Q8umv S710 75,1
